Added pool allocator

--- a/AwesomeEngine64/AwesomeEngine64.vcxproj
+++ b/AwesomeEngine64/AwesomeEngine64.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="include\Mesh3D.cpp" />
+    <ClCompile Include="src\MemoryPoolAllocator.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="include\Mesh3D.h" />
     <ClInclude Include="include\tiny_obj_loader.h" />
     <ClInclude Include="include\Window.h" />
+    <ClInclude Include="include\MemoryPoolAllocator.h" />
     <ClInclude Include="src\main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
