--- a/AwesomeEngine64/AwesomeEngine64.vcxproj.filters
+++ b/AwesomeEngine64/AwesomeEngine64.vcxproj.filters
@@ -21,10 +21,13 @@
     <ClCompile Include="src\Window.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="include\Mesh3D.cpp">
+    <ClCompile Include="src\MemoryPoolAllocator.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="src\MemoryPoolAllocator.cpp">
+    <ClCompile Include="src\OctreeNode.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AABB.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,16 +35,16 @@
     <ClInclude Include="include\Window.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
-    <ClInclude Include="src\main.h">
-      <Filter>Arquivos de Cabeçalho</Filter>
-    </ClInclude>
     <ClInclude Include="include\tiny_obj_loader.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
-    <ClInclude Include="include\Mesh3D.h">
+    <ClInclude Include="include\MemoryPoolAllocator.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
-    <ClInclude Include="include\MemoryPoolAllocator.h">
+    <ClInclude Include="include\OctreeNode.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AABB.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
