--- a/AwesomeEngine64/AwesomeEngine64.vcxproj
+++ b/AwesomeEngine64/AwesomeEngine64.vcxproj
@@ -79,10 +79,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(ProjectDir)include\;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)bin$(ProjectName)$(Configuration)$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediates$(Configuration)$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(ProjectDir)include\;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)bin$(ProjectName)$(Configuration)$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediates$(Configuration)$(Platform)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
